# house_price_prediction_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Project Plan - Funda House Price Prediction.docx  README.md  amsterdam_clusters_neighborhood_map_v10.html  amsterdam_clusters_neighborhood_map_v6.html  buildspec.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.api.txt  requirements.txt  scrape_funda_url_for_data.py  scraper.py  selenium_scraper_final.py  selenium_scraper_v1.py
.github/workflows/: python-tests.yml
config/: amsterdam_amenities.csv  df_with_lat_lon_encoded.csv  evaluator.yaml  features.yaml  house_pages.txt  hyperparameters_optuna.yaml  inference_meta.pkl  model_config.yaml  preprocessing_config.yaml  selectors.json
config/data/: amsterdam_amenities.csv  df_with_lat_lon_encoded.csv
docs/: selectors.md
frontend/src/: App.jsx
notebooks/: 01_modelling_main.ipynb  02_modelling.ipynb  02_modelling_experimentation.ipynb  03_modelling_only_xgboost.ipynb  04_log_on_target.ipynb  05_log_on_target.ipynb  06_trying_new_feature_expansion.ipynb  08_test_pipeline_for_api.ipynb  amsterdam_clusters_neighborhood_map_v6.html  data_exploration.ipynb  outlier_influence_on_reg.ipynb  test_geolocation_features.ipynb
scripts/: 01_train_baselines.py  02_run_optuna.py  03_select_and_train_best_model.py  04_load_production_model.py  generate_inference_cache.py  run_optuna.py  run_pipeline_ec2.py  test_pipeline_locally.py  test_run_full_pipeline.py  test_single_listing_for_api.py  train_baselines.py  train_best_model.py
tests/: test_preprocessing.py
(+54 files in other folders)
